feat: 简化切割逻辑